# opcua-modbus-gateway

./: .gitignore  CMakeLists.txt  README.md  changelog.md
config/: config.json
doc/: Documentation.md
include/: config.h  modbus_client.h  opcua_server.h  open62541.h  utils.h
src/: config.c  main.c  modbus_client.c  opcua_server.c  utils.c
